added the unique identifier for new exersice

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         alt="The pain you feel today is the strength you'll feel tomorrow." width="900" height="900">
     </div>
   </div>
-  <h2 class="ex">Plan and do it easily</h2>
+  <h2 class="ex" id="planer">Plan and do it easily</h2>
 <form class="taskForm6">
   <input type="text" name="taskName6">
   <button type="submit">Add a task</button>
